--- a/package.json
+++ b/package.json
@@ -11,52 +11,54 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@gorhom/bottom-sheet": "^5.2.6",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-vector-icons/codemod": "^12.2.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "^1.7.6",
-    "expo": "~53.0.22",
-    "expo-blur": "~14.1.5",
+    "@shopify/flash-list": "^2.0.2",
+    "expo": "^54.0.12",
+    "expo-blur": "~15.0.7",
     "expo-checkbox": "^5.0.7",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-linking": "~7.1.7",
-    "expo-router": "^5.1.7",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
+    "expo-constants": "~18.0.9",
+    "expo-doctor": "1.17.9",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-router": "^6.0.10",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
     "nativewind": "^4.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.2",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "~0.21.1",
+    "react-native-webview": "13.15.0",
     "tailwind-react-native-classnames": "^1.5.1",
     "twrnc": "^4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.17",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.3"
   },
   "private": true
 }
